# OffenderDS

./: LICENSE  README.md  README.rst
config/: settings.toml
data/:  catalogo_oftypsb.csv  catalogo_altmo.csv  catalogo_citizen.csv  catalogo_citwhere.csv  catalogo_crimhist.csv  catalogo_disposit.csv  catalogo_district.csv  catalogo_dobmon.csv  catalogo_dobyr.csv  catalogo_educatn.csv  catalogo_encrypt2.csv  catalogo_hisporig.csv  catalogo_inout.csv  catalogo_monsex.csv  catalogo_neweduc.csv  catalogo_newrace.csv  catalogo_numdepen.csv  catalogo_offtypsb.csv  catalogo_present.csv  catalogo_sentimp.csv  catalogo_sentmon.csv  catalogo_senttot0.csv  catalogo_sentyr.csv  catalogo_timeserv.csv  catalogo_timeservc.csv  catalogo_typeoths.csv  catalogo_years.csv  catalogo_yes_no.csv  numdepen.csv  sentencias2017.csv
sentencias/: create_raw_tables.sql  create_schemas.sql  pyproject.toml  sentencias.py  to_cleaned.sql
sentencias/sql/: create_raw_tables.sql  create_schemas.sql  helpers.sql  to_cleaned.sql  to_semantic.sql
