[tool.poetry]
name = "sentencias"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
click = "^7.0"
psycopg2 = "^2.8"
dynaconf = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
